Fix to make it responsive on mobile

--- a/style.css
+++ b/style.css
@@ -180,4 +180,8 @@ button:hover {
     .top {
         display: none;
     }
+
+    input {
+        width: 50%;
+    }
 }
